# python-tcp-command-server

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-checks.yml
echo_server/: __init__.py  __main__.py  request.py  response.py  server.py  session.py  validation.py
echo_server/actions/: action.py  action_factory.py  actions.py
server/: __init__.py  __main__.py  action_factory.py  di.py  request.py  response.py  server.py  validation.py
server/actions/: action.py  action_factory.py  actions.py  auth.py  discussions.py
server/commands/: auth_commands.py  command.py  command_context.py  command_factory.py  discussion_commands.py
server/config/: settings.py
server/db/: async_mongo_client.py  mongo_client.py
server/db/entities/: discussion.py  notification.py  reply.py  session.py
server/entities/: discussion.py  notification.py  session.py
server/models/: discussion.py
server/services/: discussion_service.py  notification_service.py  service.py  session_service.py  validation_service.py
tests/: __init__.py  conftest.py  test_auth_e2e.py  test_command_context.py  test_discussion_service.py  test_discussions.py  test_discussions_e2e.py  test_echo_server.py  test_notification_service.py  test_notifications.py  test_request.py  test_response.py  test_server.py  test_validation.py  test_validation_service.py
